--- a/MBA/templates/login.html
+++ b/MBA/templates/login.html
@@ -8,8 +8,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MBA - Login</title>
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+    <title>MBA - Login</title>
 </head>
 <body>
     {% include 'base.html' %}
 
+    <form>
+        
+    </form>
 </body>
