--- a/MBA/static/css/LoginAndRegister.css
+++ b/MBA/static/css/LoginAndRegister.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Lexend:wght@300;400;500;600;700;800&display=swap');
-
+:root {
+    --primary-color: rgba(183, 224, 230, 255);
+    --secondry-color: rgba(121, 198, 206, 255);
+    --primary-button: rgba(255, 86, 93, 255);
+  }
 * {
     padding: 0px;
     margin: 0px;
@@ -8,33 +12,46 @@
 }
 
 .register-form{
+background-color:#82b5bb99;
 max-width: 450px;
-padding: 2em 0em;
-padding-left: 1.4em !important;
-padding-right: 0.2em !important;
-margin: 1em auto;
-border: 2px solid black;
+/* padding: 2em 0em; */
+/* padding-bottom: 2em; */
+/* padding-left: 1.4em !important;
+padding-right: 0.2em !important; */
+margin: 2em auto;
 border-radius: 1rem;
+border: 2px solid black;
 }
 
 .register-form > .form-div>label,.register-form > .form-div>span
 {
-    display: block;
     font-family: 'Lexend', sans-serif;
-    font-weight: 500;
+    display: block;
+    font-size: 1.5rem;
+    margin-bottom: 1rem;
 
 }
 
 .register-form > .form-div{
-    padding: 0.3em 0.3em;
 
+    padding: 0em 2.2em;
 }
 .register-form > .form-div>input{
     font-family: 'Lexend', sans-serif;
-    font-size: 1.2rem;
+    /* font-size: 1.2rem;
     border-radius: 0.8rem;
     padding: 0.2em 0.5em;
     min-width: 80%;
+    border: 1px solid black; */
+
+    background: transparent;
+    padding: 1rem;
+    border-radius: 3px;
+    width: 100%;
+    /* color: var(--color-light); */
+    font-weight: 500;
+    outline: none;
+    font-size: 1.2rem;
     border: 1px solid black;
 
 }
@@ -48,8 +65,24 @@ border-radius: 1rem;
     max-width: 80%;
     font-size: 0.8rem;
 }
+
+.form-head-div{
+    border-radius: 1rem 1rem 0rem 0rem;
+    z-index: -10;
+    width: 100%;
+    overflow: hidden !important ;
+    /* border-radius: 0.5rem; */
+    text-align: center;
+    background: var(--secondry-color);
+}
+
+.find-text-partner{
+    text-align: center;
+    padding: 1em 0;
+    font-weight: 600;
+}
 .form-title{
-    padding-left: 30%;
+    padding: 0.5em 0;
 }
 
 .form-submit{
