--- a/MBA/static/css/LoginAndRegister.css
+++ b/MBA/static/css/LoginAndRegister.css
@@ -1,101 +1,122 @@
-@import url('https://fonts.googleapis.com/css2?family=Lexend:wght@300;400;500;600;700;800&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Lexend:wght@300;400;500;600;700;800&display=swap");
 :root {
-    --primary-color: rgba(183, 224, 230, 255);
-    --secondry-color: rgba(121, 198, 206, 255);
-    --primary-button: rgba(255, 86, 93, 255);
-  }
+  --primary-color: rgba(183, 224, 230, 255);
+  --secondry-color: rgba(121, 198, 206, 255);
+  --primary-button: rgba(255, 86, 93, 255);
+  --button-color: #be788c;
+}
 * {
-    padding: 0px;
-    margin: 0px;
-    box-sizing: border-box;
-    font-family: 'Lexend', sans-serif;
+  padding: 0px;
+  margin: 0px;
+  box-sizing: border-box;
+  font-family: "Lexend", sans-serif;
 }
 
-.register-form{
-background-color:#82b5bb99;
-max-width: 450px;
-/* padding: 2em 0em; */
-/* padding-bottom: 2em; */
-/* padding-left: 1.4em !important;
-padding-right: 0.2em !important; */
-margin: 2em auto;
-border-radius: 1rem;
-border: 2px solid black;
+.register-form {
+  /* box-shadow: 1px 1px 3px 1px rgb(0 0 0 / 15%);
+  background-color: #82b5bb99;
+  max-width: 450px;
+  margin: 2.2em auto;
+  border-radius: 1rem;
+  border: 2px solid black; */
+  width: 90%;
+  max-width: 29rem;
+  /* position: absolute; */
+  /* top: 50%;
+  left: 50%; */
+  /* transform: translate(-50%, -46%); */
+  /* background-color: ; */
+  margin: 2rem auto;
+  border-radius: 1rem;
+  box-shadow: 1px 1px 6px 3px rgb(0 0 0 / 10%);
+  overflow: hidden;
 }
 
-.register-form > .form-div>label,.register-form > .form-div>span
-{
-    font-family: 'Lexend', sans-serif;
-    display: block;
-    font-size: 1.5rem;
-    margin-bottom: 1rem;
-
+.register-form > .form-div > label {
+  font-family: "Lexend", sans-serif;
+  display: block;
+  font-size: 1rem;
+  margin: 0.5em 0;
 }
 
-.register-form > .form-div{
-
-    padding: 0em 2.2em;
+.register-form > .form-div {
+  padding: 0em 2.2em;
 }
-.register-form > .form-div>input{
-    font-family: 'Lexend', sans-serif;
-    /* font-size: 1.2rem;
+.register-form > .form-div > input {
+  box-shadow: 1px 1px 3px 1px rgb(0 0 0 / 15%);
+  font-family: "Lexend", sans-serif;
+  /* font-size: 1.2rem;
     border-radius: 0.8rem;
     padding: 0.2em 0.5em;
     min-width: 80%;
     border: 1px solid black; */
-
-    background: transparent;
-    padding: 1rem;
-    border-radius: 3px;
-    width: 100%;
-    /* color: var(--color-light); */
-    font-weight: 500;
-    outline: none;
-    font-size: 1.2rem;
-    border: 1px solid black;
-
+  background: transparent;
+  padding: 0.4rem;
+  border-radius: 4px;
+  width: 100%;
+  /* color: var(--color-light); */
+  font-weight: 400;
+  outline: none;
+  font-size: 1rem;
+  border: 1px solid rgb(122, 100, 100);
 }
 
-.inline{
-    display: inline !important;
+.inline {
+  display: inline !important;
 }
 
-.helptext{
-    text-align: center;
-    max-width: 80%;
-    font-size: 0.8rem;
+.helptext {
+  text-align: center;
+  font-size: 0.8rem;
 }
 
-.form-head-div{
-    border-radius: 1rem 1rem 0rem 0rem;
-    z-index: -10;
-    width: 100%;
-    overflow: hidden !important ;
-    /* border-radius: 0.5rem; */
-    text-align: center;
-    background: var(--secondry-color);
+.form-head-div {
+  border-radius: 1rem 1rem 0rem 0rem;
+  z-index: -10;
+  width: 100%;
+  overflow: hidden !important ;
+  /* border-radius: 0.5rem; */
+  text-align: center;
+  background: var(--secondry-color);
 }
 
-.find-text-partner{
-    text-align: center;
-    padding: 1em 0;
-    font-weight: 600;
+.find-text-partner {
+  text-align: center;
+  padding: 1em 0;
+  font-weight: 600;
 }
-.form-title{
-    padding: 0.5em 0;
-}
-
-.form-submit{
-text-align: center;
-margin: 0 auto;
-width: max-content;
-padding: 0.4em 0.9em;
-border-radius: 10rem;
-margin-top: 0.5rem;
-margin-left: 30%;
-font-size: 1.2rem;
+.form-title {
+  padding: 0.5em 0;
 }
 
-.form-submit:hover{
-    cursor: pointer;
+.form-submit {
+  text-align: center;
+  margin: 0 auto;
+  width: max-content;
+  padding: 0.4em 0.9em;
+  border-radius: 10rem;
+  margin-top: 0.5rem;
+  margin-left: 30%;
+  font-size: 1.2rem;
+}
+
+.form-submit:hover {
+  cursor: pointer;
+}
+
+.login-submit-btn{
+  background-color: transparent;
+  border: 1px solid rgb(122, 100, 100);
+  display: inline-flex;
+  align-items: center;
+  gap: 1rem;
+  cursor: pointer;
+  transition: all ease-in-out 0.3s;
+  /* padding: 1rem 2rem; */
+  padding: 0.4rem 0.8rem;
+
+  border-radius: 5px;
+  box-shadow: 1px 1px 3px 1px rgb(0 0 0 / 15%);
+  font-weight: 500;
+  margin: 1em 2.5em;
 }
