--- a/MBA/templates/index.html
+++ b/MBA/templates/index.html
@@ -119,70 +119,7 @@
             </div>
         </div>
     </section>
-    <section class="quick-link-section">
-
-        <div class="quicklink ">
-
-            <div class="more flex">
-                <h2>More MBA
-                </h2>
-                <a href="">
-                    Home
-                </a>
-                <a href="#">
-                    Blog
-                </a>
-                <a href="#">
-                    About us
-                </a>
-                <a href="#">
-                    Terms & Conditions
-                </a>
-                <a href="#">
-                    Coming Soon
-                </a>
-            </div>
-
-            <div class="followus flex">
-                <h2>Follow Us
-                </h2>
-                <a href="#">
-                    <img src="{% static '/img/instagram.png' %}">
-                    MBA
-                </a>
-                <a href="#">
-                    <img src="{% static '/img/twitter.png' %}">
-                    MBA
-                </a>
-                <a href="#">
-                    <img src="{% static '/img/snapchat.png' %}">
-                    MBA
-                </a>
-                <a href="#">
-                    <img src="{% static '/img/facebook.png' %}">
-                    MBA
-                </a>
-                <a href="#">
-                    <img src="{% static '/img/youtube.png' %}">
-                    MBA
-                </a>
-            </div>
-            <div class="subscribelink flex">
-                <h2>Subscribe to MBA
-                </h2>
-                <p>MBA offers you the opportunity to simply accelerate this process by finding out which is your life
-                    partner.
-                </p>
-                <a href="#" class="last-register">
-                    Register Now
-                </a>
-
-            </div>
-        </div>
-    </section>
-    <footer>
-        <p> Copyright &copy; MBA. </p>
-    </footer>
+    {% include 'footer.html' %}
 </body>
 
 </html>
