--- a/MBA/static/css/LoginAndRegister.css
+++ b/MBA/static/css/LoginAndRegister.css
@@ -1,10 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Lexend:wght@300;400;500;600;700;800&display=swap");
+
 :root {
   --primary-color: rgba(183, 224, 230, 255);
   --secondry-color: rgba(121, 198, 206, 255);
   --primary-button: rgba(255, 86, 93, 255);
   --button-color: #be788c;
 }
+
 * {
   padding: 0px;
   margin: 0px;
@@ -32,17 +34,18 @@
   overflow: hidden;
 }
 
-.register-form > .form-div > label {
+.register-form>.form-div>label {
   font-family: "Lexend", sans-serif;
   display: block;
   font-size: 1rem;
   margin: 0.5em 0;
 }
 
-.register-form > .form-div {
+.register-form>.form-div {
   padding: 0em 2.2em;
 }
-.register-form > .form-div > input {
+
+.register-form>.form-div>input {
   box-shadow: 1px 1px 3px 1px rgb(0 0 0 / 15%);
   font-family: "Lexend", sans-serif;
   /* font-size: 1.2rem;
@@ -74,7 +77,7 @@
   border-radius: 1rem 1rem 0rem 0rem;
   z-index: -10;
   width: 100%;
-  overflow: hidden !important ;
+  overflow: hidden !important;
   /* border-radius: 0.5rem; */
   text-align: center;
   background: var(--secondry-color);
@@ -82,9 +85,10 @@
 
 .find-text-partner {
   text-align: center;
-  padding: 1em 0;
+  padding: 0.8em 0;
   font-weight: 600;
 }
+
 .form-title {
   padding: 0.5em 0;
 }
@@ -104,7 +108,7 @@
   cursor: pointer;
 }
 
-.login-submit-btn{
+.login-submit-btn {
   background-color: transparent;
   border: 1px solid rgb(122, 100, 100);
   display: inline-flex;
@@ -114,9 +118,14 @@
   transition: all ease-in-out 0.3s;
   /* padding: 1rem 2rem; */
   padding: 0.4rem 0.8rem;
-
   border-radius: 5px;
   box-shadow: 1px 1px 3px 1px rgb(0 0 0 / 15%);
   font-weight: 500;
   margin: 1em 2.5em;
+}
+
+
+.normal-text {
+  text-decoration: none;
+  color: #000;
 }
