--- a/MBA/templates/base.html
+++ b/MBA/templates/base.html
@@ -6,17 +6,21 @@
   </a>
   <nav class="site-nav">
     <ul class="nav-list">
-      <li class="nav-list-item"><a href="{% url 'home' %}" class="">Home </a></li>
+      <li class="nav-list-item">
+        <a href="{% url 'home' %}" class="">Home </a>
+      </li>
       <li class="nav-list-item"><a href="#">Community </a></li>
       <li class="nav-list-item"><a href="#">Blog </a></li>
       <li class="nav-list-item"><a href="#">Pages </a></li>
-      <li class="nav-list-item"><a href="#">Shop </a></li>
+      {% if request.user.is_authenticated %}
+      <li class="nav-list-item"><a href="{% url 'setting' %}">Setting </a></li>
+      {% endif %}
     </ul>
   </nav>
 
   <div class="header-login">
     {% if request.user.is_authenticated %}
-    <p> Hello, <u> {{ request.user }} </u></p>
+    <p>Hello, <u> {{ request.user }} </u></p>
     <a href="{% url 'logout' %}">Logout</a>
     {% else %}
     <a href="{% url 'login' %}">Login</a>
@@ -25,7 +29,7 @@
   </div>
 
   <div class="head-options">
-    <img id = 'clickvisible' src="{% static 'img/menu.png' %}" alt="Menu" />
+    <img id="clickvisible" src="{% static 'img/menu.png' %}" alt="Menu" />
     <div class="hidden-menu" id="hiddenmenu">
       {% if request.user.is_authenticated %}
       <a href="{% url 'logout' %}">Logout</a>
@@ -33,11 +37,8 @@
       <a href="{% url 'login' %}">Login</a>
       {% endif %}
       <a href="{% url 'home' %}">Home</a>
-    
+
       <a href="#">Friends</a>
-
-
     </div>
   </div>
-
 </header>
