--- a/MBA/templates/base.html
+++ b/MBA/templates/base.html
@@ -14,6 +14,8 @@
       <li class="nav-list-item"><a href="#">Pages </a></li>
       {% if request.user.is_authenticated %}
       <li class="nav-list-item"><a href="{% url 'setting' %}">Setting </a></li>
+      <li class="nav-list-item"><a href="{% url 'members' %}">Members </a></li>
+
       {% endif %}
     </ul>
   </nav>
