--- a/MBA/templates/members.html
+++ b/MBA/templates/members.html
@@ -1,19 +1,43 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MBA -  Memebers</title>
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+    <title>MBA - Memebers</title>
 </head>
+
 <body>
     {% include 'base.html' %}
-    <section>
+    <section class="members-lists">
+
         {% for user in memmers %}
-        {{for}}
+
+        <div class="member-item">
+            <a href="{% url 'profile' user.username %}">
+                {% if user.img %}
+                <img src="{% url 'home' %}{{user.img}}" alt="Memeber"/>
+                {% else %}
+                <img src="{% static '/img/person.jpg' %}" alt="Memeber"/>
+
+                {% endif %}
+                <p class="memeber-name">{{user.first_name}} {{user.last_name}}</p>
+                <p class="age-gender">
+                    <span class="age">{{user.age}}</span> <span>{{user.gender}}</span>
+                </p>
+            </a>
+        </div>
+
         {% endfor %}
+
     </section>
+
     {% include 'footer.html' %}
 
 </body>
+
 </html>
